[gd_scene load_steps=4 format=3 uid="uid://yqvg3hxpsibx"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_06pcw"]
[ext_resource type="Texture2D" uid="uid://cm8nsvie063go" path="res://assets/pbm_background.png" id="2_cpk2l"]
[ext_resource type="Theme" uid="uid://cyk224o6irr6" path="res://assets/defaulttheme.tres" id="3_5u4g7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06pcw")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cpk2l")
ignore_texture_size = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.009375
anchor_top = 0.483333
anchor_right = 0.323438
anchor_bottom = 0.977778
offset_right = -201.0
offset_bottom = -178.0
scale = Vector2(2, 2)
theme = ExtResource("3_5u4g7")
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="NewGameBtn" type="Button" parent="VBoxContainer"]
offset_top = 85.0
offset_right = 201.0
offset_bottom = 103.0
text = "New Game"

[node name="LoadGameBtn" type="Button" parent="VBoxContainer"]
offset_top = 110.0
offset_right = 201.0
offset_bottom = 128.0
text = "Load Game"

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
offset_top = 135.0
offset_right = 201.0
offset_bottom = 153.0
text = "Options"

[node name="QuitGameBtn" type="Button" parent="VBoxContainer"]
offset_top = 160.0
offset_right = 201.0
offset_bottom = 178.0
text = "Quit"

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.0203125
anchor_top = 0.0527778
anchor_right = 0.325781
anchor_bottom = 0.341667
theme = ExtResource("3_5u4g7")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 100
text = "Pep Band
Manager"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/NewGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameBtn" to="." method="_on_load_game_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameBtn" to="." method="_on_quit_game_btn_pressed"]
